AssignGit/src/objects/Invoice_Statement__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoice Statements</relationshipLabel>
        <relationshipName>Invoice_Statements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <summarizedField>Line_Item__c.Amount__c</summarizedField>
        <summaryForeignKey>Line_Item__c.InvoiceStatement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Invoice Statement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{00000}</displayFormat>
        <label>Invoice Statement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>